sjeng/use_undefined_identifier/c1/extended_in_check
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/extended_in_check/src/moves.c:1702:6: error: use of undeclared identifier 'dword_66359C'
&& ( dword_66359C[wking_loc] & 0xFFFFFFFD) != 8 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/extended_in_check/src/moves.c:1719:57: error: use of undeclared identifier 'jpt_401814'
while ( board[wking_loc + ( __int64)*( int *)( ( char *)jpt_401814 + v8)] != 4 ) 
                                                        ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/extended_in_check/src/moves.c:1741:7: error: use of undeclared identifier 'dword_66359C'
v11 = dword_66359C[bking_loc]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/extended_in_check/src/moves.c:1759:57: error: use of undeclared identifier 'jpt_401814'
while ( board[bking_loc + ( __int64)*( int *)( ( char *)jpt_401814 + v19)] != 3 ) 
                                                        ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/extended_in_check/src/obj/moves.o] Error 1
